minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__general_parameter_reference_1.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- abc
- start: 0
  end: 4
