minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__unsigned_integer_1.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- kind: Decimal
  integer: "123"
- start: 0
  end: 3
