minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__unsigned_literal_1.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- Boolean: "False"
- start: 0
  end: 5
