minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__vector_literal_1.snap
---
source: minigu/gql/parser/src/parser/impls/lexical.rs
assertion_line: 330
expression: parsed
---
- Vector:
    values:
      - - Value:
            Literal:
              Numeric:
                Integer:
                  - kind: Decimal
                    integer: "1"
                  - start: 8
                    end: 9
        - start: 8
          end: 9
      - - Value:
            Literal:
              Numeric:
                Integer:
                  - kind: Decimal
                    integer: "2"
                  - start: 11
                    end: 12
        - start: 11
          end: 12
      - - Value:
            Literal:
              Numeric:
                Integer:
                  - kind: Decimal
                    integer: "3"
                  - start: 14
                    end: 15
        - start: 14
          end: 15
      - - Value:
            Literal:
              Numeric:
                Integer:
                  - kind: Decimal
                    integer: "4"
                  - start: 17
                    end: 18
        - start: 17
          end: 18
- start: 0
  end: 19
