minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__vector_literal_2.snap
---
source: minigu/gql/parser/src/parser/impls/lexical.rs
assertion_line: 336
expression: parsed
---
~
