minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__vector_literal_empty.snap
---
source: minigu/gql/parser/src/parser/impls/lexical.rs
assertion_line: 361
expression: parsed
---
- Vector:
    elems: []
- start: 0
  end: 9
